Post requests seem to be working with Postman but not React